--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,9 +43,9 @@
     network_mode: host
     state: started
     volumes:
-    - "{{ grid_router_path }}:{{ grid_router_path }}:ro"
+    - "{{ grid_router_path }}:/etc/grid-router:ro"
     env:
       TZ: "{{ grid_router_time_zone }}"
       DOCKER_API_VERSION: "{{ grid_router_docker_api_version }}"
     ports:
-    - "{{ grid_router_port }}:{{ grid_router_port }}"
+    - "{{ grid_router_port }}:4444"
