--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,13 @@
 ---
-grid_router_version: 1.4.0 # Install GridRouter version
+grid_router_version: latest-release # Install GridRouter version
 grid_router_path: /etc/grid-router # Path to GridRouter
 grid_router_qouta_path: /etc/grid-router/quota # Path to GridRouter quota
 grid_router_qouta_user: selenoid # GridRouter quota user
 grid_router_qouta_password: selenoid # GridRouter quota password
-grid_router_time_zone: Europe/Moscow # Timezone in container
+grid_router_time_zone: Europe/Kiev # Timezone in container
 grid_router_port: 4444 # GridRouter port
 grid_router_sctl_version: 1.2.0 # sctl version — https://github.com/seleniumkit/sctl/releases
-grid_router_docker_api_version: 1.24 # Docker api version (for GridRouter)
+grid_router_docker_api_version: 1.37 # Docker api version (for GridRouter)
 grid_router_host_list: group # Host list for selenoid.xml
 
 grid_router_regions: # Hosts list per region
